<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="22dp"
    tools:context="com.example.quizapplication1.ResultActivity" >
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/ergebnis"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/iv_cat_thumb_up"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_cat_thumb_up" />
    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/herzlichen_glueckwunsch"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Username" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:text="Sie haben 4 von 5 Punkten erzielt!" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:text="@string/beenden"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

   </LinearLayout>

