<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    android:backgroundTintMode="multiply"
    android:scaleType="centerCrop"
    android:orientation="vertical"  >

    <TextView
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/Quiz_app"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="7dp"
   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bitte_geben_sie_hier_ihren_namen_ein"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_g_johndoe"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_start"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/Anfangen"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="#9933ff" />



</LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>